--- a/touristagency/src/app/hero/hero.component.html
+++ b/touristagency/src/app/hero/hero.component.html
@@ -2,6 +2,6 @@
 <div class="container">
   <h1>{{heroHeading}}</h1>
   <p>{{heroText}}</p>
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">{{heroBtnText}}</a></p>
+  <p><a class="btn btn-primary btn-lg" href="/about-us" role="button">{{heroBtnText}}</a></p>
 </div>
 </div>
