--- a/touristagency/src/app/home-page/home-page.component.html
+++ b/touristagency/src/app/home-page/home-page.component.html
@@ -1,3 +1,69 @@
-<p>
-  home-page works!
-</p>
+<div class="container">
+  <!-- Three columns of text below -->
+  <h2 class="text-center">Best Summer Trips</h2>
+  <div class="row">
+    <div class="col-lg-4">
+      <div class="thumbnail text-center">
+        <img class="img-responsive" src="https://media.urlaubspiraten.at/cutty-sark/post/13805/2018/03/7jpeg-1521535075-EZzw_70__627_2ffe4e.jpg" alt="Turkey">
+        <div class="caption">
+          <h4>One Week All-inclusive, Turkey</h4>
+          <h5>from € 374/ pers.</h5>
+        </div>
+      </div>
+    </div>
+    <!-- /.col-lg-4 -->
+    <div class="col-lg-4">
+      <div class="thumbnail text-center">
+        <img class="img-responsive" src="https://media.urlaubspiraten.at/cutty-sark/post/12689/2018/01/allsunzorbasvillagekreta3jpeg-1515144160-tqCb_70__627_2ffe4e.jpg" alt="Crete">
+        <div class="caption">
+          <h4>One Week All-inclusive, Crete</h4>
+          <h5>from € 591/ pers.</h5>
+        </div>
+      </div>
+    </div>
+    <!-- /.col-lg-4 -->
+    <div class="col-lg-4">
+      <div class="thumbnail text-center">
+        <img class="img-responsive" src="https://media.urlaubspiraten.at/cutty-sark/post/14755/2018/05/shutterstock-540227212-1527417641-0uO9_70__627_2ffe4e.jpg" alt="Sicily">
+        <div class="caption">
+          <h4>One Week All-inclusive, Sicily</h4>
+          <h5>from € 306/ pers.</h5>
+        </div>
+      </div>
+    </div>
+    <!-- /.col-lg-4 -->
+  </div>
+  <!-- /.row -->
+  <div class="row">
+    <div class="col-lg-4">
+      <div class="thumbnail text-center">
+        <img class="img-responsive" src="https://media.urlaubspiraten.at/cutty-sark/post/13125/2018/02/pmi10724-1517731273-0Wy1_70__627_2ffe4e.jpg" alt="Majorca">
+        <div class="caption">
+          <h4>One Week All-inclusive, Majorca</h4>
+          <h5>from € 395/ pers.</h5>
+        </div>
+      </div>
+    </div>
+    <!-- /.col-lg-4 -->
+    <div class="col-lg-4">
+      <div class="thumbnail text-center">
+        <img class="img-responsive" src="https://media.urlaubspiraten.at/cutty-sark/post/13773/2018/03/9jpeg-1521279271-L4sP_70__627_2ffe4e.jpg" alt="Turkey">
+        <div class="caption">
+          <h4>One Week All-inclusive, Fuerteventura</h4>
+          <h5>from € 577/ pers.</h5>
+        </div>
+      </div>
+    </div>
+    <!-- /.col-lg-4 -->
+    <div class="col-lg-4">
+      <div class="thumbnail text-center">
+        <img class="img-responsive" src="https://media.urlaubspiraten.at/cutty-sark/post/14481/2018/05/shutterstock-764972821-1525434658-bWJw_70__627_2ffe4e.jpg" alt="Majorca">
+        <div class="caption">
+          <h4>One Week All-inclusive, Dubrovnik</h4>
+          <h5>from € 193/ pers.</h5>
+        </div>
+      </div>
+    </div>
+    <!-- /.col-lg-4 -->
+  </div>
+</div>
