--- a/touristagency/src/styles.css
+++ b/touristagency/src/styles.css
@@ -1,4 +1,4 @@
 .jumbotron {
-    background: url('https://uberblogapi.10upcdn.com/wp-content/uploads/sites/314/2016/04/shutterstock_277455644-1080x540.jpg') no-repeat center center;
+    background: url('http://wallpapers-hd-wide.com/wp-content/uploads/2016/01/summer-vacation-travel-trip-beach-sand-relax-palm-sightseeings-1920x1200.jpg') no-repeat;
     color: white;
 }
